syntax = "proto3";

package proto;
import "sts.proto";
service TaskService {
    // 游戏结束后信息
    rpc GameOver(proto.GameTableInfoArgs) returns (TaskRes){}
    //  玩家动作信息
    rpc PlayerEvent(PlayerActionArgs) returns (TaskRes){}
    //更新任务
    rpc UpsetTask(UpsetTaskArgs) returns (TaskRes) {}
}
//message GameInfoArgs {
//    int32 room_id = 1; //房间场类型
//    int32 match_type = 2;  //赛事类型
//    int32 winner = 3; //胜者id
//    repeated TaskPlayerInfo players = 4;
//    int32 time = 5;  //时间戳
//}
//
//// 玩家信息
//message TaskPlayerInfo{
//    int32 id = 1; // 玩家id
//    int32 hand_level = 2;  // 牌型
//    int32 is_allin = 3; //是否全下0否1是
//    int32 all_bet = 4; //全部下注
//}
message TaskRes{
    int32 ret = 1;
    string msg = 2;
}

message PlayerActionArgs {
    int32 room_id = 1;
    int32 match_type = 2;
    int32 id = 3; //玩家id
    int32 type  = 4; //动作类型,比如1为打赏荷官
    int32 time = 5;  //时间戳
}

message UpsetTaskArgs {
    int32 id = 1; //用户id
}